# oak-python-starter

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENCE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.agent/: VISION.md  practice-index.md
.agent/analysis/: README.md
.agent/commands/: commit.md  consolidate-docs.md  ephemeral-to-permanent-homing.md  gates.md  go.md  metacognition.md  plan.md  review.md  session-handoff.md  start-right-quick.md  start-right-thorough.md
.agent/directives/: AGENT.md  artefact-inventory.md  data-boundary-doctrine.md  evidence-methodology.md  invoke-code-reviewers.md  metacognition.md  orientation.md  principles.md  project-context.md  testing-strategy.md
.agent/examples/: README.md
.agent/experience/: 2026-04-23-foundation-closeout.md  2026-04-23-pythonic-alignment-planning.md  2026-04-23-runtime-closeout-review-loops.md  2026-04-23-ws2-demo-landing.md  2026-04-23-ws3-packaged-typing.md  2026-04-23-ws4-commitizen-and-wheel-truth.md  2026-06-17-deep-review-and-phase-1.md  2026-06-18-quality-program-tier1b.md  2026-06-18-release-model-overhaul.md  README.md
.agent/hooks/: README.md  policy.json
.agent/memory/: README.md  distilled.md  napkin.md
.agent/plans/: README.md  completed-plans.md  high-level-plan.md  roadmap.md
.agent/practice-context/: README.md
.agent/practice-core/: CHANGELOG.md  README.md  index.md  practice-bootstrap.md  practice-lineage.md  practice-verification.md  practice.md  provenance.yml
.agent/reference/: README.md  cross-platform-agent-surface-matrix.md  feature-definitions.md  local-data-cache.md  parity-and-validation.md  python-environment-setup.md
.agent/reports/: 2026-06-17-oak-quality-gate-types-review.md  2026-06-17-python-repo-deep-review.md  README.md
.agent/research/: README.md
.agent/rules/: agent-files-are-infrastructure.md  all-quality-gate-issues-are-always-blocking.md  apply-architectural-principles.md  documentation-hygiene.md  executive-memory-drift-capture.md  fail-fast-with-helpful-errors.md  follow-the-practice.md  invoke-code-reviewers.md  lint-after-edit.md  never-disable-checks.md  no-absolute-paths.md  no-compatibility-layers.md  no-global-state-in-tests.md  no-monkeypatching-in-python-tests.md  no-skipped-tests.md  no-type-shortcuts.md  no-verify-requires-fresh-authorisation.md  no-warning-toleration.md  plan-body-first-principles-check.md  pre-merge-divergence-analysis.md  read-agent-md.md  register-identity-on-thread-join.md  scope-context-guardrails.md  strict-validation-at-boundary.md  subagent-practice-core-protection.md  tdd-at-all-levels.md  tdd-for-refactoring.md  test-immediate-fails.md
.agent/sub-agents/: README.md
.claude/: settings.json
.claude/agents/: architecture-reviewer.md  code-reviewer.md  config-reviewer.md  security-reviewer.md  test-reviewer.md
.claude/commands/: jc-consolidate-docs.md  jc-go.md  jc-metacognition.md  jc-plan.md  oak-commit.md  oak-ephemeral-to-permanent-homing.md  oak-gates.md  oak-review.md  oak-session-handoff.md  oak-start-right-quick.md  oak-start-right-thorough.md
.claude/rules/: agent-files-are-infrastructure.md  all-quality-gate-issues-are-always-blocking.md  apply-architectural-principles.md  documentation-hygiene.md  executive-memory-drift-capture.md  fail-fast-with-helpful-errors.md  follow-the-practice.md  invoke-code-reviewers.md  lint-after-edit.md  never-disable-checks.md  no-absolute-paths.md  no-compatibility-layers.md  no-global-state-in-tests.md  no-monkeypatching-in-python-tests.md  no-skipped-tests.md  no-type-shortcuts.md  no-verify-requires-fresh-authorisation.md  no-warning-toleration.md  plan-body-first-principles-check.md  pre-merge-divergence-analysis.md  read-agent-md.md  register-identity-on-thread-join.md  scope-context-guardrails.md  strict-validation-at-boundary.md  subagent-practice-core-protection.md  tdd-at-all-levels.md  tdd-for-refactoring.md  test-immediate-fails.md
.codex/: README.md  config.toml
.codex/agents/: architecture-reviewer.toml  code-reviewer.toml  config-reviewer.toml  security-reviewer.toml  test-reviewer.toml
.cursor/: hooks.json
.cursor/agents/: architecture-reviewer.md  code-reviewer.md  config-reviewer.md  security-reviewer.md  test-reviewer.md
.cursor/commands/: jc-consolidate-docs.md  jc-gates.md  jc-go.md  jc-plan.md  jc-review.md  jc-start-right-quick.md  oak-commit.md  oak-ephemeral-to-permanent-homing.md  oak-metacognition.md  oak-session-handoff.md  oak-start-right-thorough.md
.cursor/rules/: agent-files-are-infrastructure.mdc  all-quality-gate-issues-are-always-blocking.mdc  apply-architectural-principles.mdc  documentation-hygiene.mdc  executive-memory-drift-capture.mdc  fail-fast-with-helpful-errors.mdc  follow-the-practice.mdc  invoke-code-reviewers.mdc  lint-after-edit.mdc  never-disable-checks.mdc  no-absolute-paths.mdc  no-compatibility-layers.mdc  no-global-state-in-tests.mdc  no-monkeypatching-in-python-tests.mdc  no-skipped-tests.mdc  no-type-shortcuts.mdc  no-verify-requires-fresh-authorisation.mdc  no-warning-toleration.mdc  plan-body-first-principles-check.mdc  pre-merge-divergence-analysis.mdc  read-agent-md.mdc  register-identity-on-thread-join.mdc  scope-context-guardrails.mdc  strict-validation-at-boundary.mdc  subagent-practice-core-protection.mdc  tdd-at-all-levels.mdc  tdd-for-refactoring.mdc  test-immediate-fails.mdc
.gemini/: settings.json
.gemini/agents/: architecture-reviewer.md  code-reviewer.md  (+3 more)
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
docs/: dev-tooling.md  first-adoption-dry-run.md  publishing-to-pypi.md  repository-governance.md  using-this-template.md
tests/: test_activity_report.py  test_activity_store.py  test_agent_hooks.py  test_devtools.py  test_gate_registry.py  test_package_entrypoint.py  test_prevent_accidental_major.py  test_release_increment.py  test_repo_audit.py
tools/: __init__.py  agent_hooks.py  prevent_accidental_major.py  release_increment.py  repo_audit.py  repo_audit_contract.toml
(+275 files in other folders)
