[project]
name = "oaknational-python-repo-template"
version = "0.1.0"
description = "Reusable Oak Python template with agent infrastructure, strict quality gates, and a demo CLI."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pandas>=3.0.0",
  "numpy>=2.4.0",
  "pyarrow>=21.0.0",
  "pyyaml>=6.0.3",
  "matplotlib>=3.10.8",
  "requests>=2.32.0",
]

[project.scripts]
activity-report = "oaknational.python_repo_template.demo.activity_report:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "pyright>=1.1.0",
  "ruff>=0.14.0",
  "pre-commit>=4.0.0",
  "commitizen>=4.10.0",
  "deptry>=0.25.1",
  "import-linter>=2.0.0",
  "pandas-stubs>=2.3.2.250926",
  "types-requests>=2.32.4.20250913",
]

[tool.deptry]
known_first_party = ["oaknational"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pyarrow"]

[tool.hatch.build.targets.wheel]
only-include = ["src/oaknational/python_repo_template"]
sources = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/oaknational/python_repo_template/py.typed" = "oaknational/python_repo_template/py.typed"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests", "tools"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = [".", "src"]

[tool.coverage.run]
source = ["oaknational.python_repo_template"]
omit = ["src/oaknational/python_repo_template/devtools.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.importlinter]
root_package = "oaknational.python_repo_template"

[[tool.importlinter.contracts]]
name = "Data boundary code must not import demo surfaces"
type = "forbidden"
source_modules = ["oaknational.python_repo_template.data"]
forbidden_modules = ["oaknational.python_repo_template.demo"]

[[tool.importlinter.contracts]]
name = "Product code must not import devtools"
type = "forbidden"
source_modules = [
  "oaknational.python_repo_template.data",
  "oaknational.python_repo_template.demo",
]
forbidden_modules = ["oaknational.python_repo_template.devtools"]
