[project]
name = "oaknational-python-repo-template"
version = "0.1.0"
description = "Reusable Oak Python template with agent infrastructure, strict quality gates, and a demo CLI."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pandas>=3.0.0",
  "numpy>=2.4.0",
  "pyarrow>=21.0.0",
  "pyyaml>=6.0.3",
  "matplotlib>=3.10.8",
  "requests>=2.33.0",
]
license = "MIT"
license-files = ["LICENCE"]
authors = [{ name = "Oak National Academy" }]
keywords = ["oak", "template", "starter", "agentic-engineering", "quality-gates"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]

[project.scripts]
activity-report = "oaknational.python_repo_template.demo.activity_report:main"

[project.urls]
Homepage = "https://github.com/oaknational/oak-python-starter"
Repository = "https://github.com/oaknational/oak-python-starter"
Issues = "https://github.com/oaknational/oak-python-starter/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "pyright>=1.1.0",
  "ruff>=0.14.0",
  "pre-commit>=4.0.0",
  "commitizen>=4.10.0",
  "deptry>=0.25.1",
  "import-linter>=2.0.0",
  "pandas-stubs>=2.3.2.250926",
  "types-requests>=2.32.4.20250913",
  "pymarkdownlnt>=0.9.38",
]

[tool.deptry]
known_first_party = ["oaknational"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pyarrow"]

[tool.hatch.build.targets.wheel]
only-include = ["src/oaknational/python_repo_template"]
sources = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/oaknational/python_repo_template/py.typed" = "oaknational/python_repo_template/py.typed"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests", "tools"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.pymarkdown]
# Recognise YAML front matter so the parser does not read a closing `---` as a
# setext heading. Disable line-length (MD013): this doc estate reflows prose and
# carries tables, links, and code that a hard column limit would fight. Disable
# first-line-heading (MD041): partials, rule files, and reviewer templates
# legitimately open with a sub-heading or prose. Allow repeated sibling headings
# (MD024) such as per-session "What Was Done" sections. Disable ordered-list
# prefix (MD029): some rule docs number their items continuously across section
# breaks as stable reference IDs. Every other rule, including MD040 (fenced code
# must declare a language) and MD025 (a single top-level heading), stays on.
extensions.front-matter.enabled = true
plugins.md013.enabled = false
plugins.md041.enabled = false
plugins.md024.siblings_only = true
plugins.md029.enabled = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = [".", "src"]

[tool.coverage.run]
source = ["oaknational.python_repo_template"]
omit = ["src/oaknational/python_repo_template/devtools.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.importlinter]
root_package = "oaknational.python_repo_template"

[[tool.importlinter.contracts]]
name = "Data boundary code must not import demo surfaces"
type = "forbidden"
source_modules = ["oaknational.python_repo_template.data"]
forbidden_modules = ["oaknational.python_repo_template.demo"]

[[tool.importlinter.contracts]]
name = "Product code must not import devtools"
type = "forbidden"
source_modules = [
  "oaknational.python_repo_template.data",
  "oaknational.python_repo_template.demo",
]
forbidden_modules = ["oaknational.python_repo_template.devtools"]
